# json2hpp

./: CMakeLists.txt  README.md  json2hpp.cpp  json2hpp.hpp
example/: CMakeLists.txt  example.cpp
example/assets/: data.json
